# simple-graph-library

./: CMakeLists.txt  README.md  main.cc
SGL/: sgl.hxx
